# stx-ha

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTORS.wrs  README.md  README.rst  centos_iso_image.inc  centos_pike_wheels.inc  centos_pkg_dirs  mwa-solon.map  pylint.rc  requirements.txt  test-requirements.txt  tox.ini
api-ref/source/: api-ref-smapi-v1-ha.rst  conf.py  index.rst
devstack/: build.sh  plugin.sh  settings
devstack/lib/: stx-ha  stx-ha.sh
service-mgmt-client/sm-client/: README.rst  requirements.txt  setup.cfg  setup.py
service-mgmt-client/sm-client/doc/source/: conf.py
service-mgmt-client/sm-client/sm_client/: __init__.py  client.py  exc.py  shell.py
service-mgmt-client/sm-client/sm_client/common/: base.py  http.py  utils.py
service-mgmt-client/sm-client/sm_client/openstack/: __init__.py
service-mgmt-client/sm-client/sm_client/openstack/common/: __init__.py  gettextutils.py  importutils.py
service-mgmt-client/sm-client/sm_client/openstack/common/config/: generator.py
service-mgmt-client/sm-client/sm_client/openstack/common/rootwrap/: cmd.py  filters.py  wrapper.py
service-mgmt-client/sm-client/sm_client/v1/: __init__.py  client.py  iservice.py  iservice_shell.py  iservicegroup.py  iservicegroup_shell.py  shell.py  sm_nodes.py  sm_nodes_shell.py  sm_sda.py  sm_sda_shell.py  smc_service.py  smc_service_node.py  smc_service_node_shell.py  smc_service_shell.py  smc_servicegroup.py  smc_servicegroup_shell.py  smservicenode.py  smservicenode_shell.py
service-mgmt-client/sm-client/tools_junk/: install_venv_common.py  with_venv.sh
(+491 files in other folders)
