[metadata]
name = sm_client
summary = SM Provisioning API Client Library
description-file = README.rst
author = WindRiver
author-email = openstack-dev@lists.openstack.org
home-page = http://www.windriver.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = sm_client

[entry_points]
console_scripts =
    smc = sm_client.shell:main

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
